# RAG_PDF-app

./: .gitignore  check_qdrant.py  custom_types.py  data_loader.py  main.py  pyproject.toml  qdrant_bd.py  streamlit_app.py
qdrant_storage/: raft_state.json
test/: test_data_loader.py  test_qdrant_bd.py
